@@ -4,6 +4,8 @@ History of Products.minaraad
 2.1.6 (unreleased)
 ------------------
 
+- Added minaraad_service to the control panel.  [maurits]
+
 - Added some sample code from a zopectl debug session for returning a
   list of members that have (recently) been modified.  Minaraad may
   want that so I will include it here.  See
